fixing width mobile to fit well on mobile navegator

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -58,3 +58,21 @@
 }
 
 /* media queries */
+@media (max-width: 768px) {
+    #contacts {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contacts-contents {
+        width: 90%;
+    }
+
+    .contacts-content h3 {
+        font-size: 24px;
+    }
+
+    .contacts-content a {
+        font-size: 18px;
+    }
+}
